# product-service

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  justfile  pyproject.toml  test.db
migrations/: env.py
migrations/versions/: 2026_02_11_0000-add_timestamps_to_products.py  2026_02_11_2337-481f18505477_product_model_added.py
src/: main.py
src/api/: routes.py  schemas.py
src/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  utils.py
src/core/db/: __init__.py  db_helper.py
src/core/models/: product.py
src/db/: db_helper.py
src/db/models/: __init__.py  product.py
src/grpc_apps/: auth_client.py
src/infrastructure/clients/: __init__.py  auth_client.py
src/interfaces/api/: routes.py  schemas.py
src/interfaces/grpc/: auth_client.py
src/migrations/: env.py
src/migrations/versions/: 2026_01_31_1448-ea8ff69b4a6a_products_table.py
src/services/: product_service.py  rabbitmq_client.py
