[project]
name = "product-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.3",
    "pydantic-settings>=2.12.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "protobuf>=6.33.5",
    "grpcio>=1.76.0",
    "contracts",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]

[tool.uv.sources]
contracts = { git = "https://github.com/dxvwave/contracts.git", rev = "0.1.1" }
